refactor: Migrate from gamified quiz app to TVU student portal
- Remove all game-related components (quiz, conquest, minigames, achievements)
- Remove game-related pages (battle, caro, memory-game, 2048, leaderboard, shop)
- Remove game-related stores and services (quiz-store, conquest-store, user-store, ai-quiz-service)
- Add TVU student portal pages (tvu-login, tvu-profile, tvu-schedule, tvu-grades, tvu-tuition, tvu-curriculum, tvu-notifications)
- Add TVU API service for backend integration with student portal endpoints
- Add TVU store for managing student data and authentication state
- Update Firebase structure documentation to reflect command-based API architecture
- Update bottom navigation and layout components for new portal navigation
- Update app configuration and package dependencies
- Add VSCode settings configuration
- Simplify theme store by removing game-specific functionality
- This refactor shifts the application focus from educational gamification to a comprehensive student information portal

--- a/ZaloApp/app-config.json
+++ b/ZaloApp/app-config.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "title": "QuizQTDAThayQuoc",
+    "title": "TVU Student",
     "textColor": {
       "light": "black",
       "dark": "white"
